registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
 name: docker-registry
 labels:
  app: docker-registry
spec:
 replicas: 2
 selector:
  matchLabels:
   app: docker-registry
 template:
  metadata:
   labels:
    app: docker-registry
  spec:
   volumes:
    - name: docker-registry-pv-storage
      persistentVolumeClaim:
       claimName: docker-registry-pvc

   containers:
   - name: docker-registry-container
     image: registry:2
     ports:
      - containerPort: 5000
     volumeMounts:
      - mountPath: "/var/lib/registry"
        name: docker-registry-pv-storage   

---
apiVersion: v1
kind: Service
metadata:
 name: docker-registry-service
spec:
 selector:
  app: docker-registry
 ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 31000
 type: LoadBalancer
