registry-service.yml
apiVersion: v1
kind: Service
metadata:
 name: docker-registry-service
spec:
 selector:
  app: docker-registry
 ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 31000
 type: LoadBalancer
