ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: docker-registry-ingress
spec:
 rules:
 - host: myregistry.com
   http:
    paths:
    - path: / 
      pathType: Prefix
      backend:
       service:
        name: docker-registry-service
        port:
         number: 5000
